--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "start" : "node index.js"
   },
   "keywords": ["devops", "nodejs", "express", "wb"],
   "author": "Stefan Kepinski",
