--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,7 +38,15 @@
       "last 1 safari version"
     ]
   },
-  "keywords": ["devops", "nodejs", "express", "wb"],
+  "keywords": [
+    "devops",
+    "nodejs",
+    "express",
+    "wb"
+  ],
   "author": "Stefan Kepinski",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  }
 }
